# tauri

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  STATE.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/agents/: tauri-release-checker.md
.claude/hooks/: format.sh
.claude/skills/check/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  gitleaks.yml  release.yml  upstream-watch.yml
scripts/: rename.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/rules/dph-registration/: manifest.json  predicates.md  rules.lp
src-tauri/resources/rules/dph-registration/gold/: cases.jsonl
src-tauri/resources/rules/dph-reverse-charge/: README.md  manifest.json  predicates.md  rules.lp
src-tauri/resources/rules/dph-reverse-charge/gold/: cases.jsonl
src-tauri/src/: lib.rs
src-tauri/src/engine/: budget.rs  classify.rs  claude.rs  extract.rs  gate.rs  gold.rs  learn.rs  mod.rs  route.rs  solve.rs  store.rs  topics.rs  types.rs
src/components/asmara/: ask-tab.tsx  correct-tab.tsx  manage-tab.tsx  review-tab.tsx
src/components/ui/: tabs.tsx
src/hooks/: use-external-links.ts
src/lib/: bindings.ts  format.ts
